some pages added. Working on user home page

--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/register.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/register.html
@@ -70,6 +70,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Kayıt Ol</button>
+    <a th:href="@{/kullanicilar/login}" class="btn btn-secondary">Giriş Sayfasına Dön</a>
   </form>
 </div>
 </body>
