--- a/YazLab1_2.ProjeDeneme/src/main/resources/static/css/user.css
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/static/css/user.css
@@ -3,16 +3,10 @@
     height: 100vh;
 }
 
-/* Sidebar ayarları */
-.sidebar {
-    height: 100%;
-    background-color: #f8f9fa;
-    padding-top: 20px;
-}
-
-/* Orta içerik alanı */
+ Orta içerik alanı
 .main-content {
     padding-top: 20px;
+    padding-left: 60px;
 }
 
 /* Etkinlik kartı */
@@ -29,3 +23,81 @@
     height: 50px;
     margin-right: 15px;
 }
+
+/* Üst Başlık */
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #9CCC65;
+    border-bottom: 1px solid #ddd;
+    position: relative;
+}
+
+/* Ortalanmış Başlık */
+.header h2 {
+    margin: 0;
+}
+
+/* Sağ üst butonlar ve profil alanı */
+.header .profile-area {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 20px;
+}
+
+.logo {
+    width: 50px;
+    margin: 0 10px;
+}
+
+.logo img {
+    width: 100%;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0px 0px 3px #5f5f5f,
+                0px 0px 0px 5px #ecf0f3,
+                8px 8px 15px #a7aaa7,
+                -8px -8px 15px #fff;
+}
+
+/* Etkinlik Oluştur */
+.sidebar-left {
+    background-color: #455A64;
+    padding: 15px;
+    margin-left: 40px;
+    margin-right: 20px;
+    border-radius: 15px; /* Yuvarlak köşeler */
+}
+
+.sidebar-left h4{
+    text-align: center;
+}
+
+/* Oluşturduğum etkinlikler */
+.sidebar-right {
+    background-color: #607D8B;
+    padding: 15px;
+    margin-right: 20px;
+    border-radius: 15px; /* Yuvarlak köşeler */
+
+}
+
+.sidebar-right h4{
+    text-align: center;
+}
+
+/* Mevcut Etkinlikler */
+.main-content {
+    background-color: #90A4AE;
+    padding: 20px;
+    border-radius: 15px;  /*Yuvarlak köşeler */
+}
+
+.main-content h4{
+    text-align: center;
+}
+
