--- a/YazLab1_2.ProjeDeneme/src/main/resources/static/css/event-page.css
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/static/css/event-page.css
@@ -46,28 +46,7 @@
     display: flex;
     align-items: center;
     position: absolute;
-    right: 20px;
-}
-
-.logo {
-    width: 50px;
-    margin: 0 10px;
-}
-
-.logo img {
-    width: 100%;
-    height: 50px;
-    object-fit: cover;
-    border-radius: 50%;
-    box-shadow: 0px 0px 3px #5f5f5f,
-                0px 0px 0px 5px #ecf0f3,
-                8px 8px 15px #a7aaa7,
-                -8px -8px 15px #fff;
-}
-
-.logout-btn {
-    margin-left: 30px; /* Diğer butonlardan biraz boşluk */
-    font-weight: bold; /* Yazıyı vurgulamak için */
+    left: 20px; /* Sol tarafa 20px mesafe */
 }
 
 /* Etkinlik Oluştur */
@@ -113,8 +92,8 @@
 }
 
 .event-img {
-    width: 80px;
-    height: 80px;
+    width: 330px;
+    height: 220px;
     object-fit: cover; /* Resmi kırpmadan boyutlandırır */
     margin-right: 15px;
     border-radius: 5px; /* Köşeleri yuvarlatır */
@@ -142,5 +121,3 @@
     padding: 20px;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1); /* Hafif iç gölge */
 }
-
-
