--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-update-page.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-update-page.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-<a th:href="@{/kullanicilar/user}" class="btn btn-secondary btn-back">Ana Ekran</a>
+<!-- javascript ile bir önceki sayfaya dinamik olarak geçişi sağlar -->
+<a href="javascript:history.back()" class="btn btn-secondary btn-back">Ana Sayfa</a>
+
 
 <div class="container">
     <div class="form-container">
