--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-page.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-page.html
@@ -13,8 +13,19 @@
   <div class="header">
     <h2>Etkinlik Sayfası</h2>
     <div class="profile-area">
-      <a th:href="@{/kullanicilar/user}" class="btn btn-secondary btn-back">Ana Ekran</a>
+      <!-- javascript ile bir önceki sayfaya dinamik olarak geçişi sağlar -->
+      <a href="javascript:history.back()" class="btn btn-secondary btn-back">Ana Sayfa</a>
     </div>
+  </div>
+
+  <div th:if="${success}" class="alert alert-success" role="alert">
+    <p th:text="${success}"></p>
+  </div>
+  <div th:if="${error}" class="alert alert-danger" role="alert">
+    <p th:text="${error}"></p>
+  </div>
+  <div th:if="${error2}" class="alert alert-danger" role="alert">
+    <p th:text="${error2}"></p>
   </div>
 
   <div class="row mt-5">
@@ -24,7 +35,7 @@
       <!-- Etkinlik Oluştur -->
       <div class="mb-4">
         <h4>Etkinlik Detayları</h4>
-        <form th:action="@{/etkinlikler/update/{id}(id=${etkinlik.id})}" method="post">
+        <form th:action="@{/katilimcilar/joinEvent/{id}(id=${etkinlik.id})}" method="get">
 
           <div>
             <img th:src="${etkinlik.resimUrl}" alt="Etkinlik Resmi" class="event-img">
@@ -79,7 +90,10 @@
 
   </div>
 
+
 </div>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
