--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/user.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/user.html
@@ -66,7 +66,7 @@
         <!-- Ana İçerik -->
         <div class="col-md-4 main-content">
             <!-- Ana içerik buraya gelecek -->
-            <h4>Mevcut Etkinlikler</h4>
+            <h4>Önerilen Etkinlikler</h4>
             <div th:each="etkinlik : ${allEvents}" class="list-group-item d-flex justify-content-between align-items-center">
                 <div>
                     <img th:src="${etkinlik.resimUrl}" alt="Etkinlik Resmi" class="event-img">
