started to admin page and some additions on admin page

--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-update-page.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-update-page.html
@@ -28,7 +28,7 @@
                 <input type="number" id="etkinlikSuresi" class="form-control" name="etkinlikSuresi" th:value="${etkinlik.etkinlikSuresi}">
             </div>
             <div class="mb-3">
-                <label for="konum" class="form-label">Konum</label>
+                <label for="konum" class="form-label">Konum (Lütfen Şu Formata Uygun Giriş Yapınız: Mah. Cad. Sok. Sit.)</label>
                 <input type="text" id="konum" class="form-control" name="konum" th:value="${etkinlik.konum}">
             </div>
             <div class="mb-3">
