--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/user-profile.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/user-profile.html
@@ -48,7 +48,7 @@
                        </div>
 
                        <div class="mb-3">
-                           <label for="konum" class="form-label">Konum</label>
+                           <label for="konum" class="form-label">Konum (Şu Formata Uygun Giriş Yapınız: Mah. Cad. Sok. Sit.)</label>
                            <input type="text" class="form-control" id="konum" name="konum" th:value="${user.konum}">
                        </div>
 
