--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/user.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/user.html
@@ -38,7 +38,7 @@
                     <input type="text" class="form-control mb-2" placeholder="Etkinlik Adı" name="etkinlikAdi">
                     <input type="text" class="form-control mb-2" placeholder="Açıklama" name="aciklama">
                     <input type="number" class="form-control mb-2" placeholder="Etkinlik Süresi" name="etkinlikSuresi">
-                    <input type="text" class="form-control mb-2" placeholder="Konum" name="konum">
+                    <input type="text" class="form-control mb-2" placeholder="Konum (Geçerli Format: Mah. Cad. Sok. Sit.)" name="konum">
                     <select class="form-select" id="kategori" name="kategori">
                         <option value="KÜLTÜREL">Seçiniz</option>
                         <option value="SPOR">Spor</option>
