--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/register.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/register.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="mb-3">
-      <label for="konum" class="form-label">Konum</label>
+      <label for="konum" class="form-label">Konum (Lütfen Şu Formata Uygun Giriş Yapınız: Mah. Cad. Sok. Sit.)</label>
       <input type="text" class="form-control" id="konum" name="konum">
     </div>
 
