--- a/YazLab1_2.ProjeDeneme/src/main/resources/static/css/admin.css
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/static/css/admin.css
@@ -68,6 +68,8 @@
 .profile-btn{
     font-weight: bold; /* Yazıyı vurgula */
     transition: background-color 0.3s ease; /* Hover efekt */
+    margin-right: 10px;
+    background-color: #FF5722;
 }
 
 .profile-btn:hover{
