--- a/YazLab1_2.ProjeDeneme/src/main/resources/static/css/update-event.css
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/static/css/update-event.css
@@ -1,6 +1,8 @@
- body {
-            background-color: #f4f7fa;
-        }
+body {
+    background: url('/images/tom-gainor-WVr6D_7t4m8-unsplash.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: 'Poppins', sans-serif;
+}
 
         .container {
             max-width: 600px;
