--- a/YazLab1_2.ProjeDeneme/src/main/resources/static/css/user-profile.css
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/static/css/user-profile.css
@@ -3,6 +3,12 @@
     height: 100vh;
 }
 
+body {
+    background: url('/images/enrapture-captivating-media-UmiFMH2zLVQ-unsplash.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: 'Poppins', sans-serif;
+}
+
  Orta içerik alanı
 .main-content {
     padding-top: 20px;
