--- a/YazLab1_2.ProjeDeneme/src/main/resources/static/css/user.css
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/static/css/user.css
@@ -3,6 +3,13 @@
     height: 100vh;
 }
 
+body {
+    background: url('/images/lucian-andrei-_5JtKjB3mto-unsplash.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: 'Poppins', sans-serif;
+}
+
+
  Orta içerik alanı
 .main-content {
     padding-top: 20px;
