--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-page-admin.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-page-admin.html
@@ -10,16 +10,10 @@
 
 <div class="container-fluid">
     <!-- Üst Başlık -->
-    <div class="header">
+    <div class="header" style="background-color: #8D6E63">
         <h2>Etkinlik Sayfası</h2>
         <div class="profile-area">
-            <!-- javascript ile bir önceki sayfaya dinamik olarak geçişi sağlar -->
-            <!--
-                  <a href="javascript:history.back()" class="btn btn-secondary btn-back">Ana Sayfa</a>
-            -->
-
             <a th:href="@{/kullanicilar/adminPage}" class="btn btn-secondary btn-back">Ana Sayfa</a>
-
         </div>
     </div>
 
@@ -127,14 +121,55 @@
 
         <!-- Ana İçerik -->
         <div class="col-md-4 main-content">
-            <!-- Mesajlaşma Paneli -->
-            <h4>Etkinlik Mesajlaşma Paneli</h4>
+            <h4>Mesaj</h4>
+            <div class="chat-container" id="chat-container">
+                <div class="chat-message">  </div>
+            </div>
 
+            <form id="chat-form" th:action="@{/etkinlikler/showEventMessage/{id}(id=${etkinlik.id})}" method="post">
+                <input type="hidden" name="etkinlikId" th:value="${etkinlik.id}" />
+            </form>
         </div>
     </div>
 
 
 </div>
+<script>
+window.onload = function () {
+        setInterval(mesajGuncelle, 3000);
+    }
+
+    async function mesajGuncelle() {
+      const mesajKutusu = document.getElementById("chat-container");
+
+            // Mesaj kutusunu temizle
+            mesajKutusu.innerHTML = "";
+
+            const cevap = await fetch("/etkinlikler/showEvent/mesajlar/" + document.getElementsByName("etkinlikId").item(0).value);
+            const veri = await cevap.json();
+
+            if (Array.isArray(veri)) {
+                const yazılanMesaj = await Promise.all(veri.map(async (mesaj) => {
+                    const kullaniciCevap = await fetch("/etkinlikler/showEvent/mesajlar/kullanici/" + mesaj.gonderici);
+                    const kullaniciVeri = await kullaniciCevap.json();
+                    return {
+                      username: kullaniciVeri.kullaniciAdi,
+                        message: mesaj
+                    };
+                }));
+
+                yazılanMesaj.forEach(({ username, message }) => {
+                    const div = document.createElement("div");
+                    div.className = "chat-message";
+                    div.innerHTML = "<p><strong>" + username + ":</strong> " + message.mesajMetni + "</p>";
+                    mesajKutusu.appendChild(div);
+                });
+                // otomatik olarak mesajı en sona kaydır
+                    mesajKutusu.scrollTop = mesajKutusu.scrollHeight;
+            }
+}
+
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
