--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-update-page.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/event-update-page.html
@@ -4,6 +4,24 @@
     <title>Etkinlik Güncelle</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/update-event.css}"> <!-- CSS dosyasını dahil ediyoruz -->
+    <style>
+        .btn-back {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      background-color: #6D4C41;
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+    }
+     .container{
+      background-color: #6D4C41;
+    }
+    .form-container{
+           background-color: #6D4C41;
+    }
+    </style>
 </head>
 <body>
 
