--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/forget-password.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/forget-password.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Şifre Yenileme</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
+    <style>
+    body {
+    background: url('/images/ricardo-gomez-angel-pbMu5q0hYbg-unsplash (1).jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: 'Poppins', sans-serif;
+}
+    </style>
 </head>
 <body>
 <div class="container mt-5">
