--- a/YazLab1_2.ProjeDeneme/src/main/resources/templates/user-profile.html
+++ b/YazLab1_2.ProjeDeneme/src/main/resources/templates/user-profile.html
@@ -4,6 +4,11 @@
     <title>Kullanıcı Profil Sayfası</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/user-profile.css}"> <!-- CSS dosyasını dahil ediyoruz -->
+    <style>
+        .btn-primary{
+                    background-color: #6D4C41;
+        }
+    </style>
 </head>
 <body>
 
